--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <div class="hero-side">
             <div class="hero-content">
                 <h1>Track Your Progress.<br>Train Better.</h1>
-                <p class="hero-subtitle">Join thousands of runners achieving their goals.</p>
-                <button id="cta-btn" class="btn-cta">Get your Own Training Plan</button>
+                <p class="hero-subtitle">Create your own training plan based on your goals.</p>
+                <button id="cta-btn" class="btn-cta">Get started</button>
             </div>
         </div>
 
