--- a/index.html
+++ b/index.html
@@ -146,10 +146,12 @@
         </div>
     </div>
     <footer>
-        <p>&copy; 2025 Meterun.</p>
+        <p>&copy; <span id="year"></span> Meterun.</p>
     </footer>
 
-
+    <script>
+        document.getElementById("year").textContent = new Date().getFullYear();
+    </script>
     <script src="script.js"></script>
 </body>
 </html>
